content/handbook/v3/ch6.mdx
---
title: "6: Abbreviations"
author:
 - Haraldur Bernharðsson
 - Odd Einar Haugen
changeLog:
 - date: 2026-04-30
   author: Robert K. Paulsen
   changes:
    - "Converted file from XML to MDX."
 - date: 2019-12-12
   author: Odd Einar Haugen
   changes:
    - "Defined this chapter as belonging to v. 3.0 of the handbook (12 December 2019)"
 - date: 2019-12-11
   author: Odd Einar Haugen
   changes:
    - "Continued the work with making text fit better into cells"
 - date: 2019-12-07
   author: Odd Einar Haugen
   changes:
    - "Changed several character entities to Unicode characters, e.g. þ to þ, so as to make more room in the tables; corrected several bibliographical links"
 - date: 2019-12-05
   author: Odd Einar Haugen
   changes:
    - "Changed Fac to Optional in the table, changed to curly single quotation marks, and made some minor changes"
 - date: 2019-10-27
   author: Odd Einar Haugen
   changes:
    - "Revised the discussion of “abbr”/“expan” and “am”/“ex” in 6.1."
 - date: 2019-10-22
   author: Tarrin Wills
   changes:
    - "Minor corrections"
 - date: 2019-09-30
   author: Odd Einar Haugen
   changes:
    - "Minor corrections"
 - date: 2019-09-28
   author: Odd Einar Haugen
   changes:
    - "Changed the “tag” elements to “gi” elemenst, as recommended by Marco Bianchi; made a distinction between three types of rend attributes for the “hi” element: rend=\"codepoint\", rend=\"entity\" and rend=\"descName\"; removed old comments in"
 - date: 2019-09-05
   author: Haraldur Bernharðsson
   changes:
    - "Corrected typos and revised 6.4.6."
 - date: 2019-07-18
   author: Odd Einar Haugen
   changes:
    - "Revised 6.5.2, 6.5.3 and 6.5.7"
 - date: 2019-07-02
   author: Odd Einar Haugen
   changes:
    - "Added one subchapter, 6.5.9"
 - date: 2019-06-28
   author: Haraldur Bernharðsson
   changes:
    - "Made various changes"
 - date: 2019-06-10
   author: Haraldur Bernharðsson
   changes:
    - "Made various changes"
 - date: 2019-02-01
   author: Odd Einar Haugen
   changes:
    - "revised the table in 6.3.8 so as to enhance the display"
 - date: 2018-01-29
   author: Odd Einar Haugen
   changes:
    - "Minor changes to the \"egXML\" and \"table\" encoding for better display"
 - date: 2017-08-29
   author: Haraldur Bernharðsson
   changes:
    - "Made some minor changes of expression. Added a column to the table in section 6.3.8 \"Dot (full stop)\" for demonstration and discussion."
 - date: 2017-06-27
   author: Odd Einar Haugen
   changes:
    - "Linked all figures to the new \"ch6\" folder in the \"graphics\" folder."
 - date: 2017-05-25
   author: Odd Einar Haugen
   changes:
    - "(1) Changed the chapter number from 5 to 6, and updated subchapters accordingly; (2) removed all subchapters on characters"
 - date: 2016-08-28
   author: Odd Einar Haugen
   changes:
    - "Made the first draft by copying the text from v. 2.0 of the handbook, and merging ch. 5 and 6 into the new chapter 5"
---


# Chapter 6. Abbreviations

Version 3.0 (12 December 2019)

by Haraldur Bernharðsson and Odd Einar Haugen

## 6.1 Introduction [#sec6.1]

Abbreviations are a common feature of medieval orthography. In the medieval Nordic
tradition, abbreviations were used most frequently in Norwegian and Icelandic
manuscripts, and particularly in the latter. In some Icelandic manuscripts, as many
as a third of the words may be abbreviated, some of them with several abbreviation
marks. The system of abbreviations was inherited from English and Continental
practice, but the adoption of this system also meant that the usage of some
abbreviation marks was extended and it led to the development of some new types.

The encoding of abbreviations is discussed in the TEI P5 Guidelines, [ch. 11](http://www.tei-c.org/release/doc/tei-p5-doc/en/html/PH.html), particularly 
[ch. 11.3.1.2.](https://www.tei-c.org/release/doc/tei-p5-doc/en/html/PH.html#PHAB).
TEI P5 offers on one level the
<E>abbr</E> element for the encoding of any abbreviations and the <E>expan</E> element
for the expansion of these abbreviations, and on the next level, the <E>am</E> element for 
the actual abbreviation markers (such as the superscript bar for a nasal) and the <E>ex</E> element 
for the expansion of these markers (in this case “n” or “m”).
While the <E>abbr</E> and <E>expan</E> elements are fully compatible with the schemas used
in this handbook, we suggest that it is sufficient to only use the elements <E>am</E> and <E>ex</E> 
for the encoding and expansion of abbreviations.

The <E>am</E> element may have a <Att>me:type</Att> attribute specifying what kind
of abbreviation it is. The same applies to the <E>ex</E> element. We have not given
examples of these attributes in the present chapter, but users may refer to the
typology in [ch. 6.2](#sec6.2) below if they would like to make a
more detailed encoding.

<div className="table-xml-elements">
| Elements &amp; attributes | Obl/Opt | Explanation |
|-----|-----|-----|
| <E>am</E> |  | Contains the abbreviation sign used in the manuscript. |
| <Att>me:type</Att> | Optional | Specifies the type of abbreviation. |
| <E>ex</E> |  | Contains the expansion inserted by the editor, replacing the abbreviation marker. |
| <Att>me:type</Att> | Optional | Specifies the type of expansion. |
</div>


In a multi-level transcription, the <E>am</E> element typically belongs to the
facsimile level (<E>me:facs</E>), while the <E>ex</E> element belongs to the
diplomatic level (<E>me:dipl</E>). The normalised level (<E>me:norm</E>)
usually has none, e.g.
```xml
<w>
  <choice>
    <me:facs>han<am>&bar;</am></me:facs>
    <me:dipl>han<ex>n</ex></me:dipl>
    <me:norm>hann</me:norm>
  </choice>
</w>
```


In this chapter, we shall give a typology of abbreviations and then exemplify a number
of cases.

## 6.2 Typology [#sec6.2]

### 6.2.1 Overview [#sec6.2.1]

Abbreviations are usually divided into four categories (see, e.g., [Hreinn Benediktsson 1965](/handbook/v3/literature#Benediktsson1965), p. 85 and, for a
more detailed classification, [Kristian
Kålund 1907](/handbook/v3/literature#Kalund1907), pp. viii&ndash;x):

(1) **Suspensions**. The first part of the word, often the
initial letter only, is written out, followed by a dot or similar mark, e.g.,
“ſ.” = ſ<em>onr</em> ‘son’. The plural may be
represented by a doubling of the initial letter, e.g., “ſſ.” =
ſ<em>ynir</em> ‘sons’.

(2) **Contractions**. Some letters are left out, but the initial
and final letters are written out, often one or more of the intermediate as well.
The abbreviation is often indicated with a horizontal bar above the word.

(3) **Interlinear marks**. The interlinear abbreviation is
usually a vowel representing either <em>r</em> or <em>v</em> + the vowel itself or a consonant representing <em>a</em> + the consonant itself.

(4) **Special signs (brevigraphs)**. These signs are usually
placed on the base line and are thus akin to ordinary letters. The Tironian
notae belong to this category.

The typology in [ch. 6.3](#sec6.3) below takes as its point of
departure the location of the abbreviations. The main distinction is drawn between
abbreviation signs placed on the base line and those placed above (or through or
below) a base line character. From the point of view of character encoding, the former
signs can be defined and treated like any other characters, while sthe latter signs must 
be defined as combining characters, like other diacritical marks.

### 6.2.2 Glyphs [#sec6.2.2]

Glyphs are displayed in the Andron font by Andreas Stötzner. The regular
version of this font can be downloaded from the [MUFI font page](http://www.mufi.info).

Since abbreviation marks typically appear as parts of words and are frequently
associated with a base line character we have chosen to illustrate each mark
within the context of a whole word.

### 6.2.3 Entity names [#sec6.2.3]

All abbreviations are referred to with entity names, with the exception of full
stop, “.”, and colon, “:”. Entity names are placed within the delimiters
“&amp;” and “;”, and we have tried to give as short and mnemonic
names as possible. As a rule, we have based the entity name on the typical
expansion of the abbreviation. Thus, the cross mark which is an abbreviation for
<em>kross</em> is given the entity name `&cross;{:xml}`.

We aim at synchronizing our use of entities with those recommended by ISO, but
since there presently are no abbreviation entities in ISO, we are left to our own
devices in this chapter.

### 6.2.4 Unicode values [#sec6.2.4]

[The
Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) has only defined a handful of abbreviation
characters and only a few of interest for our use. The great majority of
abbreviation characters must therefore be assigned to codepoints in the Private
Use Area. Among the few exceptions are the full stop, colon and semicolon, which
are part of the range [Basic Latin](http://www.unicode.org/charts/PDF/U0000.pdf) in Unicode, and the Tironian sign for
et, in the range [General
Punctuation](http://www.unicode.org/charts/PDF/U2000.pdf).

For a complete list of suggested Unicode values, see [app. A](/handbook/v3/A_characters) below.

### 6.2.5 Descriptive names [#sec6.2.5]

As is the case with ordinary characters (cf. [ch.
5](/handbook/v3/ch5)) we adhere to the naming scheme in Unicode. Since [The
Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) only defines one abbreviation mark in the Latin
alphabet, the `TIRONIAN SIGN ET` in the range [General
Punctuation](http://www.unicode.org/charts/PDF/U2000.pdf), and only one in each of the Armenian, Syriac, Devanagari,
Thai and Khmer alphabets, we do not have completley clear examples of descriptive
names. We suggest `ABBREVIATION SIGN [+ APPROPRIATE DESCRIPTION]` as a general 
name for abbreviations occupying a separate position on the base line, and
`COMBINING ABBREVIATION MARK  [+ APPROPRIATE DESCRIPTION]` for those 
typically placed above, through or below a base line character.

## 6.3 Abbreviation marks on the base line [#sec6.3]

Abbreviation marks on the base line behave as any other character. The typology of
these abbreviation marks is discussed and exemplified below.

### 6.3.1 The “et” mark [#sec6.3.1]

The Tironian <em>nota</em> resembling the number “7” (or the
character “z” with or without a crossbar) used for the conjunction <em>et</em> ‘and’ in Latin is frequently used to denote the
corresponding conjunction <em>ok</em> ‘and’ in Old Norse. We
recommend using the entity name `&et;{:xml}`, reflecting the Latin origin of
the abbreviation. In [The Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) this character is located at
`204A` in the range [General Punctuation](http://www.unicode.org/charts/PDF/U2000.pdf).

There are two major variants of this sign. If the transcriber wishes to make a
distinction between these, we suggest using `&et;{:xml}` for the sign without a
crossbar and `>&etslash;{:xml}` for the sign with a crossbar. The code point for
the latter is `F158`.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>⁊</Glyph> | <em>ok</em> | &lt;am&gt;&amp;et;&lt;/am&gt; | &lt;ex&gt;ok&lt;/ex&gt; | `204A` |
| <Glyph></Glyph> | <em>ok</em> | &lt;am&gt;&amp;etslash;&lt;/am&gt; | &lt;ex&gt;ok&lt;/ex&gt; | `F158` |
</div>


### 6.3.2 The “ed” mark [#sec6.3.2]

In Latin, the semicolon was used for <em>e</em> + dental consonant,
as in the conjunction <em>sed</em>. In Old Norse, it is very often
used in the preposition <em>með</em> ‘with’. We recommend
`&sem;{:xml}` as entity name.

In [The
Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) the semicolon is located at 003B in the range [Basic
Latin](http://www.unicode.org/charts/PDF/U0000.pdf). When the semicolon is used as a punctuation mark, it should be
transcribed as such, i.e., simply as “;”. When it is used as an abbreviation
mark we recommend that it is transcribed with an entity, `&sem;{:xml}`. Note
that there is another form of this abbreviation mark, looking like the number
“3”. This is included in the [MUFI character
recommendation](/handbook/v3/literature#MUFIrec) v. 4.0 at codepoint `F155` and can be encoded with
the entity `&etfin;{:xml}`.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>m</Glyph> | m<em>eð</em> | m&lt;am&gt;&amp;sem;&lt;/am&gt; | m&lt;ex&gt;eð&lt;/ex&gt; | `F1AC` |
</div>


### 6.3.3 The “con” mark [#sec6.3.3]

A sign resembling a backwards “c” was often used for <em>con</em> in Latin and <em>kon</em> in Norse words. This
“con” mark is similar to `0254 LATIN SMALL LETTER 
                     OPEN O` in the range [IPA Extensions](https://www.unicode.org/charts/PDF/U0250.pdf) of [The
Unicode Standard 12.0](https://unicode.org/versions/Unicode12.0.0/) and may be identified with this character. Alternatively,
it may be rendered by `2184` `LATIN SMALL LETTER 
                     REVERSED C` in the range [Number Forms](https://www.unicode.org/charts/PDF/U2150.pdf).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ɔa</Glyph> | <em>kon</em>a | &lt;am&gt;&amp;oopen;&lt;/am&gt;a | &lt;ex&gt;kon&lt;/ex&gt;a | `0254` |
</div>


See the [MUFI character 
recommendation](/handbook/v3/literature#MUFIrec) v. 4.0 for other variants of the “con” mark (descending
and with a dot).

### 6.3.4 The “rum” mark [#sec6.3.4]

The sequence “rum” was often abbreviated with a character resembling a small
version of the number 4 (in fact, it is the round “r” with a stroke across
its tail). We recommend the entity name `&rum;{:xml}` and a separate code point
in the Private Use Area.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>foꝝ</Glyph> | fo<em>rum</em> | fo&lt;am&gt;&amp;rum;&lt;/am&gt; | fo&lt;ex&gt;rum&lt;/ex&gt; | `F154` |
</div>


### 6.3.5 The cross mark [#sec6.3.5]

The word <em>kross</em> was sometimes abbreviated with the cross
symbol, which we suggest calling `&cross;{:xml}`. This <em>kross</em> mark can be identified with `271D` `LATIN
                     CROSS` in the range [Dingbats](http://www.unicode.org/charts/PDF/U2700.pdf) of [The Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>✝</Glyph> | <em>kross</em> | &lt;am&gt;&amp;cross;&lt;/am&gt; | &lt;ex&gt;kross&lt;/ex&gt; | `271D` |
</div>


### 6.3.6 The “m” rune [#sec6.3.6]

The runic character for “m” was sometimes used for the word <em>maðr</em> (including case forms with the stem <em>mann-</em>). We recommend the entity name `&mMedrun;{:xml}`. The 
[Unicode 
Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) has defined a selection of 89 runes from the Older
and Younger Futhark in the [Runic](http://www.unicode.org/charts/PDF/U16A0.pdf) range. This range includes the “m” rune.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph>ᛘ</Glyph></td>
<td><em>maðr</em></td>
<td>&lt;am&gt;&amp;mMedrun;<br/>&lt;/am&gt;</td>
<td>&lt;ex&gt;maðr&lt;/ex&gt;</td>
<td>`16D8`</td>
</tr>
</tbody>
</table>

</div>


The runic character may appear with interlinear marks (“a”, “i”,
“e”, “n”, “z”) for various inflected forms of the word <em>maðr</em>, e.g., <em>manna</em>, <em>manni</em>/<em>manne</em>, <em>mann</em>, <em>mannz</em>. The encoding of this type is
discussed in [ch. 6.4.7](#sec6.4.7) below. 

### 6.3.7 The “f” rune [#sec6.3.7]

The runic character for “f” was sometimes used for the word <em>fé</em>. In analogy with the use of the “m” rune, we suggest the
entity name `&fMedrun;{:xml}`.

The “f” rune is included in the [Runic](http://www.unicode.org/charts/PDF/U16A0.pdf) range of [The Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ᚠ</Glyph> | <em>fé</em> | &lt;am&gt;&amp;fMedrun;&lt;/am&gt; | &lt;ex&gt;fé&lt;/ex&gt; | `16A0` |
</div>


### 6.3.8 Dot (full stop) [#sec6.3.8]

Dots were often used as abbreviation marks, typically for suspensions, e.g.
“ſ.” for <em>sonr</em> (or <em>segja</em>, <em>svara</em>). We recommend that the dot is transcribed in the same
manner as a full stop, i.e. with the “.” mark in [Basic
Latin](http://www.unicode.org/charts/PDF/U0000.pdf). Thus, no entity name is called for. The dots sometimes appear on
both sides of the abbreviated word, as in “.ſ.”. Both dots serve to indiate
an abbreviation and consequently both are left out of the transcription when the
abbreviation is expanded. The two <E>am</E> elements are thus replaced by a single
<E>ex</E> element, as shown below.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph>ſ.</Glyph></td>
<td>ſ<em>onr</em></td>
<td>ſ&lt;am&gt;.&lt;/am&gt;</td>
<td>ſ&lt;ex&gt;onr&lt;/ex&gt;</td>
<td>`002E`</td>
</tr>
<tr>
<td><Glyph>.ſ.</Glyph></td>
<td>ſ<em>onr</em></td>
<td>&lt;am&gt;.&lt;/am&gt;<br/>ſ&lt;am&gt;.&lt;/am&gt;</td>
<td>ſ&lt;ex&gt;onr&lt;/ex&gt;</td>
<td>`002E`</td>
</tr>
<tr>
<td><Glyph>.kgr.</Glyph></td>
<td>k<em>onun</em>gr</td>
<td>&lt;am&gt;.&lt;/am&gt;<br/>kgr&lt;am&gt;.&lt;/am&gt;</td>
<td>k&lt;ex&gt;onun&lt;/ex&gt;gr</td>
<td>`002E`</td>
</tr>
</tbody>
</table>

</div>


If the transcriber wishes to distinguish between the dot used as an abbreviation
mark and the dot used as a punctuation mark, we suggest that the entity name
`&period;{:xml}` could be used in the former case and “.” in the
latter. However, we believe that there will arise a number of cases where it is
difficult to decide whether the dot in the manuscript is a mark of abbreviation,
punctuation or both, e.g. when a suspended word is the last word in a sentence. We
therefore believe it is better to accept that the full stop is an ambivalent mark,
as is also (although to a much lesser extent) the case with the colon and the
runic characters “f” and “m”. When the encoder believes that the full
stop is an abbreviation mark that should be indicated simply by using the
&lt;am&gt; element, as shown here.

### 6.3.9 Colon [#sec6.3.9]

The colon is sometimes, though not often, used as a mark of suspension, in the
same manner as the dot (full stop). In analogy with the encoding of dots we
suggest transcribing the colon simply as a colon, i.e., without using an
entity.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>Rognv:</Glyph> | Rognvaldr | Rognv&lt;am&gt;:&lt;/am&gt; | Rognv&lt;ex&gt;aldr&lt;/ex&gt; | `003A` |
</div>


### 6.3.10 Small capitals [#sec6.3.10]

In Old Icelandic, small capitals were used to denote geminated (long) consonants
or they were simply used ornamentally (especially in Old Norwegian).
Small capitals denoting geminate consonants, such as “ɢ” for the long
or geminate <em>gg</em> in contrast to “g” denoting the short
<em>g</em>, are comparable to Ancient Greek “ω”
denoting the long vowel <em>ō</em> in contrast to “o”
denoting the short vowel <em>o</em>, or “η” for the long
vowel <em>ē</em> in contrast to “ε” denoting the
short <em>e</em>. The small capitals should, therefore, not be
treated as abbreviations but rather as symbols in their own right and encoded as
small capitals on both facsimile and diplomatic levels. The use of small capitals
is rarely consistent and systematic and sometimes they may stand for consonants
that were undoubtedly short. Rather than attempting to differentiate accurately
between small capitals with phonological value and those that are superfluous, it
seems more practical to simply reproduce all small capitals in both the facsimile
and diplomatic transcriptions.

Small capitals may also appear with a superscript dot; for example, “ʀ̇”. These
should not be treated mechanically interpreting the superscript dot as a signal of
length, as that is almost certainly not what the scribe had in mind. Instead,
small capitals with a superscript dot should be transcribed as such both in a
facsimile and a diplomatic transcription.

## 6.4 Combining abbreviation marks [#sec6.4]

The majority of abbreviation marks are placed above, through or below a base line
character. It could be argued that they really refer to the whole word, but from an
analytical point of view we recommend that they are encoded immediately after the
base line character to which they seem most closely associated. Cf. the rules in [ch. 5.2.1](/handbook/v3/ch5#sec5.2.1).

It is sometimes difficult to decide whether a sign is placed on the base line or
above another base line character. For example, the “us” mark (cf. [ch. 6.4.3](#sec6.4.3) below) may sometimes occupy a position of its
own, although slightly raised above the base line. The classification in this chapter
is based on what we believe are the prototypical positions of the abbreviation marks. 

### 6.4.1 Horizontal bar [#sec6.4.1]

The horizontal bar is from a historical point of view the earliest form of an
abbreviation mark and it is also the most ambiguous type. It is commonly used for
“m” or “n” and is often referred to as a “nasal stroke”, but it
is also used in a number of other contexts, as a mark of suspension or
contraction. We recommend using the same entity name in all instances,
`&bar;{:xml}`. The unmarked position of the bar is above the immediately
preceding character.

This horizontal bar is partially similar to `0304` `COMBINING
                  MACRON` and `0305` `COMBINING OVERLINE` in the range [Combining
Diacritical Marks](http://www.unicode.org/charts/PDF/U0300.pdf)[](http://www.unicode.org/charts/PDF/U2000.pdf)of
[The
Unicode Standard 12.0](https://unicode.org/versions/Unicode12.0.0/), and may be identified with the latter.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ū</Glyph> | u<em>m</em> | u&lt;am&gt;&amp;bar;&lt;/am&gt; | u&lt;ex&gt;m&lt;/ex&gt; | `0305` |
| <Glyph>allā</Glyph> | alla<em>n</em> | alla&lt;am&gt;&amp;bar;&lt;/am&gt; | alla&lt;ex&gt;n&lt;/ex&gt; | `0305` |
| <Glyph>en̅</Glyph> | en<em>n</em> | en&lt;am&gt;&amp;bar;&lt;/am&gt; | en&lt;ex&gt;n&lt;/ex&gt; | `0305` |
| <Glyph>p̅</Glyph> | p<em>reſtr</em> | p&lt;am&gt;&amp;bar;&lt;/am&gt; | p&lt;ex&gt;reſtr&lt;/ex&gt; | `0305` |
| <Glyph>ꝥ</Glyph> | þ<em>at</em> | þ&lt;am&gt;&amp;bar;&lt;/am&gt; | þ&lt;ex&gt;at&lt;/ex&gt; | `0305` |
| <Glyph>ħ</Glyph> | h<em>ann</em> | h&lt;am&gt;&amp;bar;&lt;/am&gt; | h&lt;ex&gt;ann&lt;/ex&gt; | `0305` |
</div>


In the last two examples, the bar crosses the ascender of the characters
“þ” and “h”. In our view, this is only a coincidence, since the
bar in all cases is placed above the x height of the base line character. If there
is a character with an ascender, the bar will simply cross this stroke.

The unmarked position of the bar is above the base line character, and this is
therefore part of the definition of the entity `&bar;{:xml}`. In some cases the
bar may be placed below the base line character. Here, we suggest the entity name
`&barbl;{:xml}` (for “bar below”).

The horizontal bar below is partially similar to `0331`
`COMBINING MACRON BELOW` or `0332` `COMBINING LOW
                     LINE` in the range [Combining
Diacritical Marks](http://www.unicode.org/charts/PDF/U0300.pdf)[](http://www.unicode.org/charts/PDF/U2000.pdf) of
[The
Unicode Standard 12.0](https://unicode.org/versions/Unicode12.0.0/), and may be identified with the latter.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ꝧ</Glyph> | þ<em>eir</em> | þ&lt;am&gt;&amp;barbl;&lt;/am&gt; | þ&lt;ex&gt;eir&lt;/ex&gt; | `0305` |
| <Glyph>ꝑ</Glyph> | p<em>er</em> | p&lt;am&gt;&amp;barbl;&lt;/am&gt; | p&lt;ex&gt;er&lt;/ex&gt; | `0305` |
</div>


It is possible to identify various shapes of the horizontal bar. In general we
recommend that the transcriber should not make more distinctions than strictly
necessary. If the transcriber for some reason would like to create a typology of
bar forms, we suggest that this is done by numbering, `&bar-1;{:xml}`,
`&bar-2;{:xml}`, `&bar-3;{:xml}`, etc. 
The meaning of each entity must be
explained in the header of the transcription and specified in the entity list (cf.
[app. D](/handbook/v3/D_schemas) below)

### 6.4.2 Flourish [#sec6.4.2]

The flourish may be described as a horizontal bar with a return. It appears in the
abbreviation of the Latin word <em>pro</em> in contradistinction to
“per”, which typically is abbreviated with a simple horizontal bar. We
suggest using the entity name `&combflour;{:xml}` and recommend that it is
given a separate code point in the Private Use Area.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ꝓꝼaꞇ</Glyph> | p<em>ro</em>fat | p&lt;am&gt;&amp;combflour;&lt;/am&gt;&amp;fins;a&amp;trot; | p&lt;ex&gt;ro&lt;/ex&gt;fat | `F1C6` |
</div>


### 6.4.3 The <em>us</em> mark [#sec6.4.3]

Originally a Tironian <em>nota</em>, a mark resembling a small
version of the number “9” is often used for <em>us</em>. It is
usually placed in a raised position, though not always clearly above the preceding
character. Since the typical position of this mark is above the base line, we
regard it as a combining mark and suggest the entity name `&us;{:xml}` and
recommend that it is given a separate code point in the Private Use Area.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>h᷒</Glyph> | h<em>us</em> | h&lt;am&gt;&amp;us;&lt;/am&gt; | h&lt;ex&gt;us&lt;/ex&gt; | `F15B` |
| <Glyph>la᷒</Glyph> | la<em>us</em> | la&lt;am&gt;&amp;us;&lt;/am&gt; | la&lt;ex&gt;us&lt;/ex&gt; | `F15B` |
</div>


### 6.4.4 The <em>er</em> mark [#sec6.4.4]

A mark resembling a zigzag was frequently used as abbreviation of a front vowel
(including diphtongs) + “r”, e.g. “ir”, “er”, “eir”,
“ær”. The earliest form resembles a horizontal stroke with a
descender to the left and an ascender to the right. It later acquired a
zigzag-like form and even later resembles the letter “u” turned upside-down.
This abbreviation mark has now become part of the Unicode Standard (based on its
usage in Lithuanian) in the range [Combining
diacritical marks](http://www.unicode.org/charts/PDF/U0300.pdf).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>v͛a</Glyph> | v<em>er</em>a | v&lt;am&gt;&amp;er;&lt;/am&gt;a | v&lt;ex&gt;er&lt;/ex&gt;a | `035B` |
| <Glyph>va</Glyph> | v<em>er</em>a | v&lt;am&gt;&amp;ercurl;&lt;/am&gt;a | v&lt;ex&gt;er&lt;/ex&gt;a | `F1C8` |
| <Glyph>heꝼ</Glyph> | hef<em>ir</em> | he&amp;fins;&lt;am&gt;&amp;ercurl;&lt;/am&gt; | hef&lt;ex&gt;ir&lt;/ex&gt; | `F1C8` |
</div>


### 6.4.5 The <em>ra</em> mark [#sec6.4.5]

Originally an open form of the character “a”, this mark was used as an
abbreviation for <em>ra</em> or <em>va</em>. One variant resembles
the Greek letter Omega and another variant an Omega with a horizontal bar above. We suggest
using the entity name `&ra;{:xml}` for the first type and `&rabar;{:xml}` for the second. We recommend that the latter is given a separate code
point in the Private Use Area.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>sᷓ</Glyph> | s<em>va</em> | s&lt;am&gt;&amp;ra;&lt;/am&gt; | s&lt;ex&gt;va&lt;/ex&gt; | `1DD3` |
| <Glyph>ꝼ</Glyph> | f<em>ra</em> | &amp;fins;&lt;am&gt;&amp;rabar;&lt;/am&gt; | f&lt;ex&gt;ra&lt;/ex&gt; | `F1C1` |
</div>


### 6.4.6 The <em>ur</em> mark [#sec6.4.6]

The syllable <em>ur</em> (sometimes <em>yr</em>) can
be abbreviated by a mark resembling a small version of the numeral “2”. A second form of
this mark resemble a tilde, and a third form a horizontal version of the number “8”
(equal to the lemniskate symbol), cf. [Hreinn Benediktsson
1965](/handbook/v3/literature#Benediktsson1965), p. 91. Due to the considerable variation in form we suggest that it might be
useful to distinguish between three main forms, using the entity `&urrot;{:xml}` for the first type, `&ur;{:xml}` for the second and `&urlemn;{:xml}` for the third. The code points are respectively `F153`, `1DD1` and `F1C2` (the first and the third of these in the Private Use Area).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ock</Glyph> | ock<em>ur</em> | ock&lt;am&gt;&amp;urrot;&lt;/am&gt; | ock&lt;ex&gt;ur&lt;/ex&gt; | `F153` |
| <Glyph>b᷑þ</Glyph> | b<em>ur</em>þ | b&lt;am&gt;&amp;ur;&lt;/am&gt;þ | b&lt;ex&gt;ur&lt;/ex&gt;þ | `1DD1` |
| <Glyph>ſpþe</Glyph> | ſp<em>ur</em>þe | ſp&lt;am&gt;&amp;urlemn;&lt;/am&gt;þe | ſp&lt;ex&gt;ur&lt;/ex&gt;þe | `F1C2` |
</div>


### 6.4.7 Interlinear characters [#sec6.4.7]

Interlinear characters are a common type of abbreviation. An interlinear vowel
typically represents a consonant (often <em>r</em>) + the vowel
itself, while an interlinear consonant typically represents a vowel (often <em>a</em>) + the consonant itself. We suggest that interlinear
abbreviation marks are named by the character itself + “sup” (for
“superscript”), e.g. `&asup;{:xml}` (interlinear “a”),
`&osup;{:xml}` (interlinear “o”), `&rscapsup;{:xml}` (interlinear
small capital “r”), etc.

[The
Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) includes a selection of more than 30 superscript
characters in the ranges [Combining Diacritical Marks](http://www.unicode.org/charts/PDF/U0300.pdf), `0363–036F` and [Combining
Diacritical Marks Supplement](https://unicode.org/charts/PDF/U1DC0.pdf), `1DD4–1DF4`.
We suggest that these characters are used to display interlinear characters and
that characters outside this selection are given separate code points in the
Private Use Area. See the [MUFI 
character recommendation](/handbook/v3/literature#MUFIrec) v. 4.0 for further specifications.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>bͦg</Glyph> | b<em>or</em>g | b&lt;am&gt;&amp;osup;&lt;/am&gt;g | b&lt;ex&gt;or&lt;/ex&gt;g | `0366` |
| <Glyph>mͣ</Glyph> | m<em>anna</em> | m&lt;am&gt;&amp;asup;&lt;/am&gt; | m&lt;ex&gt;anna&lt;/ex&gt; | `0363` |
| <Glyph>vþa</Glyph> | v<em>ir</em>þa | v&lt;am&gt;&amp;inodotsup;&lt;/am&gt;þa | v&lt;ex&gt;ir&lt;/ex&gt;þa | `0365` |
| <Glyph>þegͬ</Glyph> | þeg<em>ar</em> | þeg&lt;am&gt;&amp;rsup;&lt;/am&gt; | þeg&lt;ex&gt;ar&lt;/ex&gt; | `036C` |
</div>


The runic character “m”, which itself can be used as an abbreviation (cf.
[ch. 6.3.6](#sec6.3.6) above), can appear with an interlinear
abbreviation mark. The encoding follows the pattern above.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph>ᛘͣ</Glyph></td>
<td><em>manna</em></td>
<td>&lt;am&gt;&amp;mMedrun;<br/>&amp;asup;&lt;/am&gt;</td>
<td>&lt;ex&gt;manna&lt;/ex&gt;</td>
<td>`16D8 + 0363`</td>
</tr>
</tbody>
</table>

</div>


Since the first entity, `&mMedrun;{:xml}`, is defined as a base line character
and the second, `&asup;{:xml}`, as an interlinear mark placed above the
immediately preceding base line character, there will be no doubt as to the
positioning. 

### 6.4.8 Superscript dots [#sec6.4.8]

Superscript dots are sometimes used to denote length. It is a moot question
whether this is a type of abbreviation, but in any case the transcriber should use
an entity for the encoding. We recommend that superscript dots are transcribed in
analogy with other combining abbreviation marks and suggest using the entity name
`&combdot;{:xml}` (for `combining dot above{:xml}`).

[The
Unicode Standard 12.0 ](https://unicode.org/versions/Unicode12.0.0/) has a combining dot above in the range [Combining
diacritical marks](http://www.unicode.org/charts/PDF/U0300.pdf).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>leġıa</Glyph> | leg<em>g</em>ia | leg&lt;am&gt;&amp;combdot;&lt;/am&gt;&amp;inodot;a | leg&lt;ex&gt;g&lt;/ex&gt;ia | `0307` |
</div>


## 6.5 Special cases [#sec6.5]

### 6.5.1 Nomina sacra [#sec6.5.1]

In some cases, the whole word must be analysed as an abbreviation. This applies to
the traditional <em>nomina sacra</em>, i.e. abbreviations for sacred
words such as <em>Iesus</em> and <em>Christus</em>.
These contain characters which originally were Greek but might be taken for Latin
characters. For example, the “p” in “xpm” is originally a Greek
“rho” (“r”).

We believe these abbreviations should be encoded as a sequence of the individual
base line characters and one or more combining bars above. In the examples below,
the originally Greek base line characters have been identified with the
similar-looking Latin characters. Greek characters might also have been used in
the encoding (such as `&igr;{:xml}` for `GREEK SMALL LETTER
                     IOTA`, etc.).

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>ıc</Glyph> | <em>iesus</em> | &lt;am&gt;ıh&amp;bar;c;&lt;/am&gt; | &lt;ex&gt;iesus&lt;/ex&gt; | `0305` |
| <Glyph>xp̅m</Glyph> | <em>christum</em> | &lt;am&gt;xp&amp;bar;m&lt;/am&gt; | &lt;ex&gt;christum&lt;/ex&gt; | `0305` |
</div>


Typically in abbreviations of this sort, the bar extends over neighbouring
letters. To replicate that, the combining bar above can be encoded as part of the 
neighbouring letters as well, even if it may be argued that there is only a single bar in
each example, and that this bar simply happens to extend over more than one character. This
problem is discussed more fully in [ch. 6.5.5](#sec6.5.5) below.

### 6.5.2 Interlinear characters in other contexts [#sec6.5.2]

Interlinear (superscript) characters are used in various ways, not always as
abbreviations. According to [Andrea de Leeuw van
Weenen 2000](/handbook/v3/literature#Weenen2000), pp. 36&ndash;43 there are four types:

**(a) as abbreviation**

This type is discussed in [ch. 6.4.7](#sec6.4.7) above. Here, we
recommend the usage of the <E>am</E> element and entities such as
`&asup;{:xml}` and the like.

**(b) as addition**

When superscript characters are used for adding characters which are missing on
the base line we recommend that they are encoded by use of the element
<E>add</E> and the attribute <Att>place="supralinear"</Att> (cf. [ch. 9.2.1.1](/handbook/v3/ch9#sec9.2.1.1)). One might argue that if the
scribe has added the superscript character as part of the writing process, it
should not be regarded as an addition, but rather as an ordinary character which
just happened to be placed over the line. However, it is difficult to make a
distinction between characters written above the line as part of the writing
process and characters that were added later, maybe shortly afterwards, whether by
the same scribe or by another scribe. As a general rule we therefore recommend
encoding supralinear characters by the <E>add</E> element and the attribute
<Att>place="supralinear"</Att>. There is no need for an entity of the type
`&asup;{:xml}` since the location of the character is indicated by the
element.

<div className="table-abbr">
| Manuscript form | Display in an edition | Encoding |
|-----|-----|-----|
| <Glyph>hanͣ</Glyph> | han⸌a⸍ | han&lt;add place="supralinear"&gt;a&lt;/add&gt; |
</div>


**(c) as complementation of Roman numbers**

Inflected forms of Roman numbers are sometimes specified by interlinear
characters. In these cases, the interlinear characters are not placed above any
base line character but merely raised above the base line. We suggest encoding
them by appropriate entities, such as `&trotsup;{:xml}` and `&inodotsup;{:xml}`. Note that
these interlinear characters are combining, so in order to avoid a position above
the last base line character, an empty space entity, `&nbsp;{:xml}`, has been added
before each raised character:

<div className="table-abbr">
| Manuscript form | Display in an edition | Encoding |
|-----|-----|-----|
| <Glyph>v.  </Glyph> | v.&ensp;&ensp; | v.&amp;nbsp;&amp;trotsup;&amp;nbsp;&amp;inodotsup; |
</div>


**(d) as space savers**

Especially at the end of a line one or more characters may be placed above the
last word to save place and complete the line. In these cases, we suggest that
they are interpreted and encoded as part of the writing process, thus not using
the <E>add</E> element, but by superscript entities, such as `&ssup;{:xml}` for a
superscript “s”. 

<div className="table-abbr">
| Manuscript form | Display in an edition | Encoding |
|-----|-----|-----|
| <Glyph>eᷤ</Glyph> | eᷤ | e&amp;ssup; |
</div>


### 6.5.3 Missing abbreviation mark [#sec6.5.3]

From time to time one can find examples of a word that obviously is abbreviated
but where there is no trace of the abbreviation mark. For example, a single
“d” (with no punctuation mark) may be used for the word “dróttning”.
There is then no alternative but transcribing the text as it reads in the
manuscript.

This is what we would recommend on the facsimile level of transcription. On the
diplomatic and normalised levels, we recommend using the <E>supplied</E>
element, i.e. “d&lt;supplied&gt;rottning&lt;/supplied&gt;”.

### 6.5.4 Nesting (stacking) of abbreviation marks [#sec6.5.4]

There are a few examples of base line characters which are abbreviated with an
abbreviation mark which is itself abbreviated. An example is the base line
character “m” with an interlinear “o” which in turn has a horizontal
bar. According to rule 6 in [ch. 5.2.1](/handbook/v3/ch5#sec5.2.1)
above this abbreviation should be encoded as the sequence `m{:xml}` +
`&osup;{:xml}` + `&bar;{:xml}`.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion |
|-----|-----|-----|-----|
| <Glyph>mͦ̅</Glyph> | m<em>onnom</em> | m&lt;am&gt;&amp;osup;&amp;bar;&lt;/am&gt; | m&lt;ex&gt;onnom&lt;/ex&gt; |
</div>


Since `&osup;{:xml}` is defined as a combining character, it follows that it is
placed above the immediately preceding character, in this case “m”, and since
`&bar;{:xml}` is also defined as a combining character, it follows that it
is placed above `&osup;{:xml}`. There is therefore no doubt as to the
positioning of each part. 

### 6.5.5 Extension of abbreviation marks [#sec6.5.5]

As a rule, combining abbreviation marks are associated with a single base line
character. Thus, the sequence `m&osup;{:xml}` means that the interlinear
character “o” is seen as being placed above “m” and not above any other
character. However, some abbreviation marks extend over more than one character.
For example, the word “k<em>ir</em>kia” may be abbreviated with
a horizontal bar crossing both the first and the second “k”. We believe it is
sufficient to associate the abbreviation mark with only one of these characters,
preferably the first.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph>k̅k̅ıa</Glyph></td>
<td>k<em>ir</em>kia</td>
<td>k&lt;am&gt;&amp;bar;&lt;/am&gt;<br/>k&amp;inodot;a</td>
<td>k&lt;ex&gt;ir&lt;/ex&gt;kia</td>
</tr>
</tbody>
</table>

</div>


It is possible to encode this word in such a way that the bar is associated with
both characters. This is in a sense closer to the manuscript form, but it means
that a single abbreviation mark may appear as two distinct marks (unless it is
somehow stated that the two marks belong together). Thus, this is a more complex
and possibly misleading solution.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion |
|-----|-----|-----|-----|
| <Glyph>k̅k̅ıa</Glyph> | k<em>ir</em>kia | k&lt;am&gt;&amp;bar;&lt;/am&gt;k&lt;am&gt;&amp;bar;&lt;/am&gt;&amp;inodot;a | k&lt;ex&gt;ir&lt;/ex&gt;kia |
</div>


On the other hand, it should be noted that this a case where `0305` `COMBINING OVERLINE` is appropriate, since it connects to left and
right. Cf. the reference in [ch. 6.4.1](#sec6.4.1) above.

### 6.5.6 Sporadic ligatures with abbreviation marks [#sec6.5.6]

We recommended that sporadic ligatures should not be encoded by use of separate
entities but by the element <E>seg</E> with the attribute
<Att>type="lig"</Att>. A sporadic ligature is basically a joining of two
base line characters which together do not reflect a separate phonological value.
This is the case with ligatures such as “s+k” and “p+p” which in this
respect are identical to “s”&ensp;+&ensp;“k” and
“p”&ensp;+&ensp;“p”.

See [ch. 4.3](/handbook/v3/ch4#sec4.3) above for further examples.

<div className="table-abbr">
| Manuscript form | Expanded form | Encoding |
|-----|-----|-----|
| <Glyph></Glyph> | pp | <E>seg type="lig"</E>pp<E>/seg</E> |
</div>


However, some ligatures are formed in such a manner that it is difficult to
distinguish the separate parts. That applies to the ligature of long “s” +
“h”, “k” and “þ”. In these cases, we suggest that it is
advisable to use individual entities. These characters must be referred to the
Private Use Area.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph></Glyph></td>
<td>h<em>an</em>ſ</td>
<td>&lt;am&gt;&amp;hslonglig;&lt;/am&gt;</td>
<td>h&lt;ex&gt;an&lt;/ex&gt;ſ</td>
<td>`EBAD`</td>
</tr>
<tr>
<td><Glyph></Glyph></td>
<td>k<em>onung</em>ſ</td>
<td>&lt;am&gt;&amp;kslonglig;&lt;/am&gt;</td>
<td>k&lt;ex&gt;onung&lt;/ex&gt;ſ</td>
<td>`EBAE`</td>
</tr>
<tr>
<td><Glyph></Glyph></td>
<td>þ<em>eſ</em>ſ</td>
<td>&lt;am&gt;&amp;thornslonglig;<br/>&lt;/am&gt;</td>
<td>þ&lt;ex&gt;eſ&lt;/ex&gt;ſ</td>
<td>`E734`</td>
</tr>
</tbody>
</table>

</div>


Often, a horizontal bar is used across these ligatures. The bar may be encoded
separately with its usual entity, `&bar;{:xml}` (cf. [ch.
6.4.1](#sec6.4.1) above) or with a character located in the Private Use Area.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph></Glyph></td>
<td>k<em>onung</em>ſ</td>
<td>&lt;am&gt;&amp;kslonglig;<br/>&amp;bar;&lt;/am&gt;</td>
<td>k&lt;ex&gt;onung&lt;/ex&gt;ſ</td>
<td>`EBAE + 0305`</td>
</tr>
<tr>
<td><Glyph></Glyph></td>
<td>k<em>onung</em>ſ</td>
<td>&lt;am&gt;&amp;kslongligbar;<br/>&lt;/am&gt;</td>
<td>k&lt;ex&gt;onung&lt;/ex&gt;ſ</td>
<td>`E7C8`</td>
</tr>
</tbody>
</table>

</div>


### 6.5.7 The character “r” as interlinear ligature [#sec6.5.7]

A quite special type of abbreviation is interlinear “r” in ligature with e.g.
“þ”. The encoding is similar to the examples in [ch. 6.5.6](#sec6.5.6) above.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph></Glyph> | þ<em>a</em>r | &lt;am&gt;þ&amp;rsup;&lt;/am&gt; | þ&lt;ex&gt;a&lt;/ex&gt;r | `E8C1` |
</div>


### 6.5.8 Sharp “s” [#sec6.5.8]

In late Old Norwegian, the “sharp s” appears in a number of abbreviations,
e.g. for <em>skilling</em>, <em>smør</em> and
<em>son</em>. The German character “sharp s” is defined in
[The
Unicode Standard 12.0](https://unicode.org/versions/Unicode12.0.0/) as `00DF` 
`LATIN SMALL LETTER SHARP S` in the range [Latin-1
Supplement](http://www.unicode.org/charts/PDF/U0080.pdf). We recommend using the ISO entity `&szlig;{:xml}` also
when this character is used as an abbreviation mark. The element<E>am</E> will
indicate clearly that it is an abbreviation mark, not an ordinary character. See
the discussion on the full stop in [ch. 6.3.8](#sec6.3.8)
above.

<div className="table-abbr">
<table>
<thead>
<tr>
<th>Abbreviated form</th>
<th>Expanded form</th>
<th>Encoding of abbreviation</th>
<th>Encoding of expansion</th>
<th>Code point</th>
</tr>
</thead>
<tbody>
<tr>
<td><Glyph>Hakonß</Glyph></td>
<td>Hakon<em>son</em></td>
<td>Hakon&lt;am&gt;&amp;szlig;<br/>&lt;/am&gt;</td>
<td>Hakon&lt;ex&gt;son&lt;/ex&gt;</td>
<td>`00DF`</td>
</tr>
</tbody>
</table>

</div>


### 6.5.9 The semicolon abbreviation [#sec6.5.9]

In Old Swedish, the semicolon character is often used as an abbreviation for the
front vowel “e” or “æ” + the dental “t” or “dh”, typically in words like “medh”
and “thet” (Old Norse <em>með</em> and <em>þat</em>).
The expansion of the abbreviated syllable varies, and will in many cases be based
on the usage in the individual manuscripts.

<div className="table-abbr">
| Abbreviated form | Expanded form | Encoding of abbreviation | Encoding of expansion | Code point |
|-----|-----|-----|-----|-----|
| <Glyph>mꝫ</Glyph> | m<em>edh</em> | m&lt;am&gt;&amp;etfin;&lt;/am&gt; | m&lt;ex&gt;edh&lt;/ex&gt; | `A76B` |
| <Glyph>thꝫ</Glyph> | th<em>et</em> | th&lt;am&gt;&amp;etfin;&lt;/am&gt; | th&lt;ex&gt;et&lt;/ex&gt; | `A76B` |
</div>


There is a long-standing tradition for rendering this abbreviation character as
“z”, e.g. “mz” and “thz”. This goes back to 17th century editions of medieval
texts, and it has been kept in a large number of later scholarly editions. We
recommend expanding this abbreviation according to the spelling of these words in
full, as suggested in the table above. It cannot be denied, however, that this
rule requires some investigation into the manuscript orthography when deciding the
exact expansion.

## 6.6 List of abbreviation marks [#sec6.6]

An extensive list of abbreviation characters is found in the [MUFI 
character recommendation](/handbook/v3/literature#MUFIrec), cf. [app. A](/handbook/v3/A_characters) below.